Remove in house Streams helper and use sdk available methods instead.